--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,7 @@
     --larger-text: clamp(2rem,5vw,2.2rem);
     --large-text: clamp(1.8rem,5vw,2vw);
     --medium-text: clamp(1.6rem,5vw,1.8rem);
-
-    --small-text: clamp(1rem,5vw,1.1rem);
-    --smaller-text: clamp(0.9rem,5vw,1rem);
+    --small-text: clamp(0.9rem,5vw,1rem);
 }
 
 
@@ -27,6 +25,7 @@ html{
     overflow-x: hidden;
     scroll-behavior: smooth;
     line-height: 1.6;
+    position: relative;
 }
 
 h1,
@@ -53,7 +52,7 @@ h3{
 }
 
 p{
-    font-size: var(--smaller-text);
+    font-size: var(--small-text);
     font-weight: lighter;
 }
 
@@ -67,7 +66,7 @@ button{
 button,
 a,
 input{
-    padding: 0.6rem 0.9rem;
+    padding: 0.5rem 0.8rem;
 }
 
 a{
