--- a/css/index.css
+++ b/css/index.css
@@ -19,25 +19,35 @@ h3{
 
 
 .hero-section-container{
+    overflow-x: hidden;
     display: grid;
     grid-template-columns: 5% 1fr 5%;
     grid-template-areas: 
-    '. header .'
+    '. . .'
     '. section .'
     '. footer .';
-    grid-template-rows: 15vh 75vh 10vh;
+    grid-template-rows: 12vh 78vh 15vh;
 }
 
 .hero-header{
-    position: sticky;
+    position: fixed;
     top: 0;
-    grid-area: header;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 15;
+    height: 12vh;
+    transition: all .5s ease-in;
+}
+
+.hero-header-wrapper{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 15;
+    width: 90%;
+    height: 100%;
+    margin: 0 5%;
 }
-
 
 
 .hero-logo span{
@@ -81,6 +91,12 @@ h3{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.nav-btn-style{
+    font-weight: bold;
+    text-decoration: underline;
+    transition: all .2s ease-in;
 }
 
 .user-btn-bx{
@@ -165,6 +181,7 @@ h3{
         transition: none;
     }
 
+
     .nav-btn-bx,
     .user-btn-bx{
         flex-direction: row;
@@ -178,15 +195,20 @@ h3{
     .user-btn-bx::before{
         content: none;
     }
+
+    .user-login-btn{
+        background-color: var(--accent-color);
+        color: var(--dominant-color);
+    }
     
     .hero-section-container{
         grid-template-columns: 5% repeat(10,1fr) 5%;
         grid-template-areas: 
-        '. header header header header header header header header header header .'
+        '. . . . . . . . . . . .'
         '. section section section section section . image image image footer .'
         '. . image2 image2 image2 . section2 section2 section2 section2 section2 .';
         grid-template-rows: 15vh 75vh 75vh;
-        gap: 3rem 1rem;
+        gap: 3rem 0;
         align-items: center;
     }
 
