--- a/css/profile.css
+++ b/css/profile.css
@@ -2,7 +2,7 @@
     --dominant-color: #EBEBEB;
     --secondary-color: #595860;
     --accent-color: #009063;
-
+    --error-color: #fa7777;
 }
 
 p,
@@ -19,9 +19,22 @@ button{
 
 body{
     background-color: var(--dominant-color);
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 15;
+    background-color: rgba(0,0,0,0.5);
+    display: none;
+}
+
+.overlay-toggle{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    pointer-events: none;
 }
 
 .profile-container{
@@ -29,28 +42,47 @@ body{
     grid-template-columns: 5% 1fr 5%;
     grid-template-areas: 
     '. img .'
-    '. info .'
+    '. form .'
     '. btn .';
     position: relative;
-    width: 100%;
+    justify-content:center;
+    overflow-x: hidden;
     height: 100%;
 }
 
-.profile-img-bx{
+.profile-info-bx{
     grid-area: img;
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+}
+
+.profile-img-bx{
+    position: relative;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
 .profile-img{
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 75px;
+    height: 75px;
     position: relative;
-    margin: 1rem;
+    margin-bottom: 1rem;
+}
+
+.profile-contact-bx{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:200px;
 }
 
 .profile-username,
@@ -58,23 +90,39 @@ body{
     font-weight: bold;
 }
 
-.profile-info-bx{
-    grid-area: info;
+.submit-img-bx{
+    background-color: var(--accent-color);
+    color: var(--dominant-color);
+    padding: 0.3rem 0.6rem;
+    position: relative;
+    overflow:hidden;
+    margin-top: 1rem;
+}
+
+.submit-img-btn{
+    height:0;
+    width:0;
+    position: absolute;
+}
+
+
+.profile-form-bx{
+    grid-area: form;
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 2.5rem;
+    gap: 3rem;
 }
 
 .profile-title{
     margin: 2rem 0 0 0;
 }
 
-.profile-info-input-bx{
+.profile-form-input-bx{
     position: relative;
 }
 
-.profile-info-input-bx label{
+.profile-form-input-bx label{
     position: absolute;
     top: 50%;
     left: 1rem;
@@ -83,7 +131,7 @@ body{
     transition: all .2s ease-in;
 }
 
-.profile-info-input-bx .profile-float-label{
+.profile-form-input-bx .profile-float-label{
     transform: translateY(-160%);
     opacity: 1;
     background-color: var(--dominant-color);
@@ -91,7 +139,18 @@ body{
     z-index: 2;
 }
 
-.profile-info-input-bx input{
+.profile-form-input-error{
+    position: absolute;
+    top: -1.7rem;
+    right: 0.2rem;
+    display: inline-block;
+    color: var(--error-color);
+    font-size: 0.8rem;
+    z-index: 3;
+}
+
+
+.profile-form-input-bx input{
     display: block;
     width: 100%;
     background-color:var(--dominant-color);
@@ -104,22 +163,83 @@ body{
 }
 
 .profile-btn-bx{
-    margin-top: 2rem;
+    margin: 2.5rem 0 1rem 0;
     grid-area: btn;
     display: flex;
     flex-direction: column;
     gap: .5rem;
 }
 
-.profile-btn-bx button:first-child{
+.profile-btn{
     background-color: var(--accent-color);
     color: var(--dominant-color);
 }
 
 
-.profile-btn-bx button:last-child{
+.profile-pass-btn{
     margin-bottom: 1rem;
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
 }
 
+.profile-password-container{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    grid-column: 2/3;
+    width: min(100%,500px);
+    margin: 0 auto;
+    z-index: 15;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    transform:translateX(400px);
+    opacity: 0;
+    background-color: var(--dominant-color);
+    transition: all .3s ease-in;
+}
+
+.profile-password-container .profile-form-input-bx{
+    margin: 1rem 0;
+}
+
+.profile-pass-btn-bx{
+    margin: 1rem 0;
+}
+
+.profile-toggle-modal{
+    transform:translateX(0);
+    opacity: 1;
+}
+
+.profile-close-btn{
+    align-self: flex-end;
+    padding-right: 0;
+}
+
+.profile-close-btn i{
+    font-size: 1.2rem;
+}
+
+
+
+
+@media(min-width:520px){
+    .profile-container{
+        grid-template-columns: 5% 500px 5%;
+    }
+    .profile-img-bx{
+        margin-top: 2rem;
+    }
+    .profile-btn-bx{
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 2rem;
+    }
+    
+
+    .profile-btn-bx button:last-child{
+        margin-bottom: 0;
+    }
+}
