--- a/css/login.css
+++ b/css/login.css
@@ -4,6 +4,7 @@
     --accent-color: #009063;
 
     --error-color: #fa7777;
+    --light-color: #f1f1f1;
 }
 
 body{
@@ -74,7 +75,7 @@ input{
 }
 
 
-.login-form-input-bx .login-float-label{
+.login-form-input-bx .float-label{
     transform: translateY(-150%);
     opacity: 1;
     background-color: var(--dominant-color);
@@ -146,6 +147,7 @@ input{
 .login-reveal-password-btn i,
 .login-not-reveal-password-btn i{
     color: var(--secondary-color);
+    pointer-events: none;
 }
 
 .toggle-reveal-password-btn{
@@ -190,6 +192,8 @@ input{
         padding: 2rem;
         box-shadow: 1px 1px 10px rgba(0,0,0,0.1),
         -1px -1px 10px rgba(255,255,255,0.0125);
+        background-color: var(--light-color);
+        border-radius: 4px;
     }
     
     .login-title{
@@ -208,6 +212,10 @@ input{
 
     .login-bx{
         padding: 2rem 3rem;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
     }
 
     .login-img-bx{
@@ -217,5 +225,11 @@ input{
         box-shadow: 1px 1px 10px rgba(0,0,0,0.1),
         -1px -1px 10px rgba(255,255,255,0.0125);
         filter: brightness(80%);
+    }
+    .login-img-bx img{
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
     }
 }
