--- a/css/profile.css
+++ b/css/profile.css
@@ -3,6 +3,7 @@
     --secondary-color: #595860;
     --accent-color: #009063;
     --error-color: #fa7777;
+    --light-color: #f1f1f1;
 }
 
 p,
@@ -34,7 +35,6 @@ body{
 
 .overlay-toggle{
     display: flex;
-    pointer-events: none;
 }
 
 .profile-container{
@@ -42,12 +42,11 @@ body{
     grid-template-columns: 5% 1fr 5%;
     grid-template-areas: 
     '. img .'
-    '. form .'
-    '. btn .';
+    '. form .';
     position: relative;
     justify-content:center;
     overflow-x: hidden;
-    height: 100%;
+    height: 100vh;
 }
 
 .profile-info-bx{
@@ -90,13 +89,19 @@ body{
     font-weight: bold;
 }
 
+.profile-img-error{
+    color: var(--error-color);
+    margin-top: 1rem;
+}
+
 .submit-img-bx{
     background-color: var(--accent-color);
     color: var(--dominant-color);
     padding: 0.3rem 0.6rem;
     position: relative;
     overflow:hidden;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
+    border-radius: 4px;
 }
 
 .submit-img-btn{
@@ -128,10 +133,10 @@ body{
     left: 1rem;
     transform: translateY(-50%);
     opacity: 0;
-    transition: all .2s ease-in;
+    transition: transform .2s ease-in;
 }
 
-.profile-form-input-bx .profile-float-label{
+.profile-form-input-bx .float-label{
     transform: translateY(-160%);
     opacity: 1;
     background-color: var(--dominant-color);
@@ -163,8 +168,7 @@ body{
 }
 
 .profile-btn-bx{
-    margin: 2.5rem 0 1rem 0;
-    grid-area: btn;
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     gap: .5rem;
@@ -197,6 +201,7 @@ body{
     opacity: 0;
     background-color: var(--dominant-color);
     transition: all .3s ease-in;
+    border-radius: 4px;
 }
 
 .profile-password-container .profile-form-input-bx{
@@ -221,6 +226,26 @@ body{
     font-size: 1.2rem;
 }
 
+.profile-reveal-password-btn,
+.profile-not-reveal-password-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: transparent;
+    opacity: 0.7;
+}
+
+.profile-reveal-password-btn i,
+.profile-not-reveal-password-btn i{
+    color: var(--secondary-color);
+    pointer-events: none;
+}
+
+.toggle-reveal-password-btn{
+    display: none;
+}
+
+
 
 
 
@@ -241,5 +266,132 @@ body{
 
     .profile-btn-bx button:last-child{
         margin-bottom: 0;
+    }
+}
+
+@media(min-width:1024px){
+    .profile-container{
+        grid-template-columns: 5% repeat(10,1fr) 5%;
+        grid-template-rows: repeat(3,1fr);
+        grid-template-areas: 
+        '. img img img . . . . . . . .'
+        '. . . form form form form form form form form .';
+    }
+
+    .profile-info-bx{
+        flex-direction: column;
+        width: 100%;
+        z-index: 5;
+        position: absolute;
+        grid-row: 2/3;
+        margin-top: 0;
+        margin-left: 3rem;
+        height: 80%;
+        align-self: center;
+        background-color: var(--accent-color);
+        box-shadow: 1px 1px 10px rgba(0,0,0,0.1),
+        -1px -1px 10px rgba(255,255,255,0.0125);
+        border-radius: 4px;
+    }
+
+    .profile-username,
+    .profile-email{
+        color: var(--dominant-color);
+    }
+
+    .profile-img-error{
+        color: var(--error-color);
+        font-weight: bold;
+        margin-top: 1rem;
+    }
+
+    .submit-img-bx{
+        color: var(--secondary-color);
+        font-weight: bold;
+        background-color: var(--dominant-color);
+    }
+
+    .profile-form-bx{
+        padding: 6rem 2rem 2rem 11rem;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        position: relative;
+        gap: 0;
+        box-shadow: 1px 1px 10px rgba(0,0,0,0.1),
+        -1px -1px 10px rgba(255,255,255,0.0125);
+        background-color: var(--light-color);
+        border-radius: 4px;
+    }
+
+    .profile-title{
+        position: absolute;
+        top: 0;
+        left: 11.5rem;
+    }
+
+    .profile-form-input-bx {
+        margin: 1rem;
+    }
+
+    .profile-form-input-bx:nth-of-type(9) .float-label{
+        transform: translateY(-270%);
+    }
+
+    .profile-form-input-bx input{
+        width: 100%;
+    }
+
+    .profile-btn-bx{
+        flex-direction: column;
+        align-items: stretch;
+        margin: 1rem 1rem 0 1rem;
+    }
+
+    .profile-password-container{
+        top: 50%;
+        left: 50%;
+        grid-column: 1/13;
+        transform:translate(400px,-50%);
+        z-index: -1;
+        align-self: center;
+    }
+
+    .profile-toggle-modal{
+        transform: translate(-50%,-50%);
+        opacity: 1;
+        z-index: 15;
+        
+    }
+    
+}
+
+@media(min-width:1200px){    
+
+    .profile-form-bx{
+        padding: 6rem 2rem 2rem 12rem;
+    }
+
+    .profile-title{
+        left: 12.5rem;
+    }
+}
+
+@media(min-width:1400px){    
+
+    .profile-form-bx{
+        padding: 6rem 2rem 2rem 14rem;
+    }
+
+    .profile-title{
+        left: 14.5rem;
+    }
+    
+    .profile-btn-bx{
+        flex-direction: row;
+        align-items: center;
+        margin: 0 0 0 1rem;
+    }
+    .profile-form-input-bx:nth-of-type(9) .profile-float-label{
+        transform: translateY(-160%);
     }
 }
