--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 :root{
     --larger-text: clamp(2rem,5vw,2.2rem);
     --large-text: clamp(1.8rem,5vw,2vw);
-    --medium-text: clamp(1.6rem,5vw,1.8rem);
+    --medium-text: clamp(1.4rem,5vw,1.6rem);
     --small-text: clamp(0.9rem,5vw,1rem);
 }
 
@@ -26,6 +26,7 @@ body{
     scroll-behavior: smooth;
     line-height: 1.6;
     position: relative;
+    scroll-padding-top: 12vh;
 }
 
 
@@ -60,14 +61,18 @@ p{
 label,
 input,
 a,
-button{
+button,
+textarea{
     font-size: var(--small-text);
 }
 
 button,
 a,
-input{
+input,
+textarea{
     padding: 0.8rem 0.9rem;
+    border: none;
+    border-radius: 4px;
 }
 
 a{
@@ -80,12 +85,6 @@ button{
     cursor: pointer;
     font-weight: bold;
     text-transform: uppercase;
-    border: none;
-    outline: none;
-}
-
-input{
-    border: none;
 }
 
 img{
